[Misc] Moved CreatePageNestedDocumentsIT test to a docker-based test and since it was the last old func test type, remove the test-tests module (yeah!)